# coggml

./: CMakeLists.txt
.github/workflows/: release.yml
examples/: CMakeLists.txt
examples/opencog/: CMakeLists.txt  main.cpp  reasoning_example.cpp
include/: ggml-opencog.h
src/: CMakeLists.txt  ggml-opencog.cpp
tests/: test-opencog.cpp
